# TradingSystem

./: .editorconfig  .gitattributes  .gitignore  AGENT_IMPLEMENTATION_INSTRUCTIONS_ELITE.md  ANALISIS_INSTITUCIONAL_COMPLETO.md  AUDITORIA_ESTRATEGIAS_CONSOLIDADA.md  AUDIT_CORE_20251113.md  AUDIT_CRITICAL_FINDINGS.md  AUDIT_CRITICAL_ISSUES.md  AUDIT_FEATURES_DETAILED.md  AUDIT_FEATURES_README.md  AUDIT_FEATURES_SUMMARY.txt  AUDIT_INDEX.md  AUDIT_INDEX.txt  AUDIT_QUICK_REFERENCE.txt  AUDIT_RESUMEN_EJECUTIVO.md  BACKTESTING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ESTRUCTURA_DEFINITIVA_PROYECTO.md  EXECUTIVE_SUMMARY.txt  GATEKEEPER_INTEGRATION_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  INFORME_CIO_MANDATO_DELTA.md  INFORME_EJECUTIVO_MANDATO_1.md  INFORME_EJECUTIVO_MANDATO_2.md  INFORME_RESTAURACION_20251105_130608.txt  INSTITUTIONAL_AUDIT_REPORT.md  INSTITUTIONAL_UPGRADE_COMPLETE.md  INTEGRATE_VPS.ps1  INTEGRATE_VPS.sh  INVENTARIO_ESTRATEGIAS.md  Invoke-ArchitecturalCorrection.ps1  Invoke-InstitutionalImportCorrection.ps1  LEVEL2_INTEGRATION_REPORT.md  ML_ADAPTIVE_SYSTEM.md  PAPER_TRADING_CHECKLIST.txt  PLAN_IMPLEMENTACION_AGENTE.md  POSITION_SIZING_INTEGRATION.txt  (+84 more)
.github/: CODEOWNERS
audit_report/: FINAL_EXECUTIVE_SUMMARY.txt  OPTIMIZATION_CHANGES_20251105_001514.txt  OPTIMIZATION_CHANGES_20251105_001623.txt  OPTIMIZATION_PROPOSALS.txt  SUMMARY.txt  final_report.json  final_report_consolidated.json  initial_state.json  report.json
auditorias/: QUICK_REFERENCE.md  README.md  RESUMEN_EJECUTIVO.txt  auditoria_gatekeepers.md  (+2 more)
(+619 files in other folders)
